--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </h5>
                 <p class="mbr-text">
                     Email: oguilhercampos@gmail.com
-                    <br>Telefone: +55 (21) 97360 4535 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br></p>
+                    <br>Telefone: <br>+55 (21) 97360 4535 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"></h5>
